# agentprdiff

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  HANDOVER.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
api/adapters/: index.html
api/cli/: index.html
api/graders/: index.html
api/python/: index.html
architecture/: index.html
best-practices/: index.html
concepts/: index.html
contributing/: index.html
docs/: adapters-vercel.md  adapters.md  suite-layout.md
docs-site/: NOTES.md  docusaurus.config.js  mkdocs.yml  sidebars.js
docs-site/docs/: architecture.md  best-practices.md  concepts.md  contributing.md  faq.md  index.md  installation.md  quickstart.md  roadmap.md  troubleshooting.md
docs-site/docs/api/: adapters.md  cli.md  graders.md  python.md
docs-site/docs/scenarios/: ci-cd.md  debugging.md  edge-cases.md  failure-handling.md  index.md  large-suites.md  openai-adapter.md  performance.md  simple-suite.md
docs-site/docs/usage/: advanced.md  basic.md  configuration.md  customization.md
examples/regression-tour/: README.md  agent.py  suite.py  tour.sh
faq/: index.html
installation/: index.html
quickstart/: index.html
roadmap/: index.html
scenarios/: index.html
scenarios/ci-cd/: index.html
scenarios/debugging/: index.html
scenarios/edge-cases/: index.html
scenarios/failure-handling/: index.html
scenarios/large-suites/: index.html
scenarios/openai-adapter/: index.html
scenarios/performance/: index.html
scenarios/simple-suite/: index.html
search/: search_index.json
src/agentprdiff/: __init__.py  loader.py  masking.py  reporters.py  runner.py  scaffold.py  trace_store.py
src/agentprdiff/adapters/: __init__.py  anthropic.py  openai.py  pricing.py
src/agentprdiff/graders/: http_judge.py  semantic.py
studio/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
studio/backend/: README.md  pyproject.toml
studio/backend/src/agentprdiff_studio/: __init__.py  cli.py  main.py  settings.py
studio/backend/src/agentprdiff_studio/agents_md/: __init__.py  import_sanitizer.py  parser.py  preflight.py  templates.py  validate.py
studio/backend/src/agentprdiff_studio/api/: __init__.py  agents_md.py  baseline_review.py  benchmark.py  case_runs.py  case_timeline.py  coverage.py  errors.py  projects.py  replay.py  runs.py  schemas.py  secrets.py  suite_health.py  tour.py
studio/backend/src/agentprdiff_studio/db/: __init__.py  models.py  session.py
studio/backend/src/agentprdiff_studio/executor/: __init__.py  bus.py  dispatch.py  events.py  http_run.py  run.py  runner_shim.py  tasks.py  venv.py
studio/backend/src/agentprdiff_studio/graders/: __init__.py  specs.py
studio/backend/src/agentprdiff_studio/intake/: __init__.py  ast_extract.py  discovery.py  git.py  git_auth.py  http.py  zip.py
studio/backend/src/agentprdiff_studio/llm/: __init__.py  providers.py  resolve.py
studio/backend/src/agentprdiff_studio/resources/: AGENTS.md  __init__.py
studio/backend/src/agentprdiff_studio/secrets/: __init__.py  crypto.py  resolve.py
studio/backend/src/agentprdiff_studio/tour/: __init__.py  ci_yaml.py  simulate.py  state.py
studio/backend/tests/: test_deep_scan_boundary.py  test_import_sanitizer.py  test_intake_git_auth.py  test_preflight.py
studio/docs/: quickstart-for-non-devs.md  screencast.md
studio/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
studio/frontend/dist-m7/: index.html
studio/frontend/dist-m7/assets/: index-BBMt6O0n.css  (+1 more)
studio/frontend/src/: App.tsx  index.css  main.tsx
tests/: test_adapter_anthropic.py  test_adapter_openai.py  test_adapter_openai_async.py  test_adapter_pricing.py  test_graders.py  test_http_judge.py  test_http_judge_integration.py  test_loader.py  test_masking.py  test_review.py  test_trace_store.py
troubleshooting/: index.html
usage/advanced/: index.html
usage/basic/: index.html
usage/configuration/: index.html
usage/customization/: index.html
video-tutorials/customer_support_agent/: .gitignore  README.md  agent.py  requirements.txt  suite.py
video-tutorials/customer_support_agent/suites/: README.md  __init__.py  _eval_agent.py  _stubs.py  customer_support.py  customer_support_cases.md
(+48 files in other folders)
