[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprdiff"
version = "0.2.0"
description = "Guard your LLM agents in CI. Snapshot tests that catch behavioral regressions when models, prompts, or vendors change."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vinoth Nageshwaran", email = "vnageshwaran@gmail.com" }]
keywords = [
    "llm",
    "agent",
    "evaluation",
    "regression-testing",
    "snapshot-testing",
    "ci",
    "observability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/vnageshwaran-de/agentprdiff"
Documentation = "https://github.com/vnageshwaran-de/agentprdiff#readme"
Issues = "https://github.com/vnageshwaran-de/agentprdiff/issues"
Repository = "https://github.com/vnageshwaran-de/agentprdiff"

[project.scripts]
agentprdiff = "agentprdiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentprdiff"]

[tool.hatch.build.targets.sdist]
include = ["src/agentprdiff", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
