[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprdiff-studio"
version = "0.1.0"
description = "Web UI + server for agentprdiff. Single-tenant Docker image, browser-based baseline approval, run history."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vinoth Nageshwaran", email = "vnageshwaran@gmail.com" },
]
keywords = ["llm", "agent", "evaluation", "snapshot-testing", "ui", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    # Engine — installed as a local path dep during development;
    # released versions will pin to a PyPI version once tagged.
    "agentprdiff>=0.2.5",
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    # Data layer
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Config + validation
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # Secrets encryption
    "cryptography>=43.0",
    # Intake helpers
    "GitPython>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "httpx>=0.27",
]

[project.scripts]
agentprdiff-studio = "agentprdiff_studio.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentprdiff_studio"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentprdiff_studio/resources/AGENTS.md" = "agentprdiff_studio/resources/AGENTS.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
